{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 44,
  "lineage": "12e1b46d-1c97-0985-3186-72a0751b20de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef6cc322bfff646",
            "arn": "arn:aws:ec2:us-east-1:893058002693:instance/i-01043090b09fe84a2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01043090b09fe84a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Milko-EC2-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05719ad6861a51b71",
            "private_dns": "ip-172-20-10-160.ec2.internal",
            "private_ip": "172.20.10.160",
            "public_ip": "54.242.147.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a78e955a96767359",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a768cf3368b46d7",
            "tags": {
              "Name": "MyLab-Ansible-Server"
            },
            "tags_all": {
              "Name": "MyLab-Ansible-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038b691fb6453940f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-SecGroup",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-ManagedNode1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef6cc322bfff646",
            "arn": "arn:aws:ec2:us-east-1:893058002693:instance/i-0cbe79b8002d96baa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbe79b8002d96baa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Milko-EC2-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e465996d55ea3b85",
            "private_dns": "ip-172-20-10-22.ec2.internal",
            "private_ip": "172.20.10.22",
            "public_ip": "54.197.33.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03eb267db26a90a4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a768cf3368b46d7",
            "tags": {
              "Name": "MyLab-MN1-TomCat-Server"
            },
            "tags_all": {
              "Name": "MyLab-MN1-TomCat-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038b691fb6453940f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-SecGroup",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-ManagedNode2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef6cc322bfff646",
            "arn": "arn:aws:ec2:us-east-1:893058002693:instance/i-0343a3e9083cbbab2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0343a3e9083cbbab2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Milko-EC2-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0477ab4ecf80fb727",
            "private_dns": "ip-172-20-10-36.ec2.internal",
            "private_ip": "172.20.10.36",
            "public_ip": "34.227.111.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e2e369469e558da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a768cf3368b46d7",
            "tags": {
              "Name": "MyLab-MN2-Docker-Server"
            },
            "tags_all": {
              "Name": "MyLab-MN2-Docker-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038b691fb6453940f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-SecGroup",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef6cc322bfff646",
            "arn": "arn:aws:ec2:us-east-1:893058002693:instance/i-024bc9d6af99800be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024bc9d6af99800be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Milko-EC2-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087d48862859a20df",
            "private_dns": "ip-172-20-10-159.ec2.internal",
            "private_ip": "172.20.10.159",
            "public_ip": "204.236.194.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02d0973f05c39e8d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a768cf3368b46d7",
            "tags": {
              "Name": "MyLab-Jenkins-Server"
            },
            "tags_all": {
              "Name": "MyLab-Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038b691fb6453940f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-SecGroup",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef6cc322bfff646",
            "arn": "arn:aws:ec2:us-east-1:893058002693:instance/i-0e4edafdf9d5ec773",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4edafdf9d5ec773",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Milko-EC2-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009e7235bb6e75a90",
            "private_dns": "ip-172-20-10-32.ec2.internal",
            "private_ip": "172.20.10.32",
            "public_ip": "54.226.98.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0adb4e7b855272d28",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a768cf3368b46d7",
            "tags": {
              "Name": "MyLab-Nexus-Server"
            },
            "tags_all": {
              "Name": "MyLab-Nexus-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038b691fb6453940f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-SecGroup",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonarQube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef6cc322bfff646",
            "arn": "arn:aws:ec2:us-east-1:893058002693:instance/i-015fd966f2e0ae406",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015fd966f2e0ae406",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Milko-EC2-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020ced465a0d55fa7",
            "private_dns": "ip-172-20-10-70.ec2.internal",
            "private_ip": "172.20.10.70",
            "public_ip": "107.23.154.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef97f21b43f3488a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a768cf3368b46d7",
            "tags": {
              "Name": "MyLab-SonarQube-Server"
            },
            "tags_all": {
              "Name": "MyLab-SonarQube-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038b691fb6453940f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-SecGroup",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyLab-IntGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893058002693:internet-gateway/igw-037f1470263b621db",
            "id": "igw-037f1470263b621db",
            "owner_id": "893058002693",
            "tags": {
              "Name": "MyLab-InternetGW"
            },
            "tags_all": {
              "Name": "MyLab-InternetGW"
            },
            "vpc_id": "vpc-0a8b3a3e6484ba73c"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyLab-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893058002693:route-table/rtb-0c1d0d52fd395ccba",
            "id": "rtb-0c1d0d52fd395ccba",
            "owner_id": "893058002693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037f1470263b621db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyLab-RouteTable"
            },
            "tags_all": {
              "Name": "MyLab-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8b3a3e6484ba73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyLab-RTAssoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2629f4a2b701617",
            "route_table_id": "rtb-0c1d0d52fd395ccba",
            "subnet_id": "subnet-07a768cf3368b46d7"
          },
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_route_table.MyLab-RouteTable",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyLab-SecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893058002693:security-group/sg-038b691fb6453940f",
            "description": "Allows inbound and outbound traffic to EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038b691fb6453940f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MyLab Security Group",
            "name_prefix": "",
            "owner_id": "893058002693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow traffic"
            },
            "tags_all": {
              "Name": "Allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8b3a3e6484ba73c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyLab-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893058002693:subnet/subnet-07a768cf3368b46d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a768cf3368b46d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893058002693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyLab-Subnet1"
            },
            "tags_all": {
              "Name": "MyLab-Subnet1"
            },
            "vpc_id": "vpc-0a8b3a3e6484ba73c"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyLab-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893058002693:vpc/vpc-0a8b3a3e6484ba73c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-068d479c9eb5482ef",
            "default_route_table_id": "rtb-0de16b6515322d5a6",
            "default_security_group_id": "sg-0b5bfb838e75cfca0",
            "dhcp_options_id": "dopt-0c39ad2f7928f14cf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a8b3a3e6484ba73c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de16b6515322d5a6",
            "owner_id": "893058002693",
            "tags": {
              "Name": "MyLab-VPC"
            },
            "tags_all": {
              "Name": "MyLab-VPC"
            }
          }
        }
      ]
    }
  ]
}